--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,8 @@
 /* ESTILOS GENERALES BODY*/
 body{
     background-image: url(../media/caja-paquetes-o-cajas-carton-smartphone-concepto-logistica-transporte-entrega-linea-sobre-fondo-rosa-ilustracion-renderizado-3d.jpg);
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: fill;
 }
 
 /* ESTILOS TÍTULOS PRINCIPALES */
